--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+  padding: 1rem;
+}
 .App {
   text-align: center;
 }
@@ -7,32 +10,42 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Card {
+  height: 100px;
+  width: 300px;
+  border: 1px solid gray;
+  border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.close {
+  display: none !important;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.Column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  padding: .5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.Name-Block {
+  font-size: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.viewUser {
+  width: fit-content;
+  margin-top: .5rem;  
+}
+
+.viewUser {
+  border-radius: 5px;
+  border: 0px;
 }
